...
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".AddNoteActivity">

    <!-- Editable text area -->
    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:gravity="top"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
                android:textAlignment="center"
                android:textColor="@color/priority_text"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/note_background"
            android:text="@string/save"
            android:textAllCaps="true" />
...
